2005-08-10  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Add no_wall for Section.

2005-08-05  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* cavity.cpp: Don't allow to turn off coherence.

2005-08-05  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* stack.h: Add power scattering matrices.
	* stack.cpp: Ditto.

2005-08-05  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add always_recalc.
	* defs.cpp: Ditto.
	* waveguide.cpp: Ditto.
	* scatterer.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.
	
2005-07-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Make more standards compliant.
	* cavity.cpp: Ditto.

2005-07-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Allow to turn off cavity coherence.
	* defs.cpp: Ditto.
	* cavity.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2005-06-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Wrap extra BlochSection functions.

2005-06-13  Peter Debackere  <Peter.Debackere@UGent.be>

	* camfr_wrap.cpp: Add ASR solver.
	* defs.h: Ditto.
	* defs.cpp: Ditto.

2005-06-03  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.h: Fix interface routines with complex conjugate.
	* interface.cpp: Ditto.

2005-05-30  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* S_scheme_fields.h: Fix Planar plotting.

2005-05-27  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.h: Add interface routines with complex conjugate.
	* interface.cpp: Ditto.
	* camfr_wrap.cpp: Add BlochSection.

2005-04-06  Peter Vandersteegen  <Peter.Vandersteegen@UGent.be>

	* camfr_wrap.cpp: Fix get_kt() and set_kt().

2005-03-01  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* geometry3d.py: Implement add_flipped.

2005-02-18  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Add L_anis solver.

2005-02-08  Pieter Dumon  <Pieter.Dumon@UGent.be>

	* bloch.cpp: Better detection of fw/bw modes.
	* infstack.cpp: Ditto.

2005-02-04  Peter Bienstman  <Peter.Bienstman@UGent.be>
