@@ -112,6 +112,6 @@ void InfStack::calcRT()
 
   last_lambda = global.lambda;
   if (global.gain_mat)
-    last_gain_mat = *global.gain_mat;
+    last_gain_mat_n = global.gain_mat->n();
   last_slab_ky = global.slab_ky;
 }
