@@ -87,7 +87,7 @@ void DenseInterface::calcRT()
 
   last_lambda = global.lambda;
   if (global.gain_mat)
-    last_gain_mat = *global.gain_mat;
+    last_gain_mat_n = global.gain_mat->n();
   last_slab_ky = global.slab_ky;
 }
 
@@ -812,7 +812,7 @@ void DiagInterface::calcRT()
 
   last_lambda = global.lambda;
   if (global.gain_mat)
-    last_gain_mat = *global.gain_mat;
+    last_gain_mat_n = global.gain_mat->n();
 }
 
 
