@@ -76,9 +76,9 @@ class MultiScatterer : public Scatterer
   public:
 
     MultiScatterer()
-      : last_lambda(0.0), last_gain_mat(Material(0.0)) {}
+      : last_lambda(0.0), last_gain_mat_n(0.0) {}
     MultiScatterer(Waveguide& inc, Waveguide& ext)
-      : Scatterer(inc, ext), last_lambda(0.0), last_gain_mat(Material(0.0)) {}
+      : Scatterer(inc, ext), last_lambda(0.0), last_gain_mat_n(0.0) {}
 
     bool recalc_needed() const;
 
@@ -92,9 +92,9 @@ class MultiScatterer : public Scatterer
     // The wavelength and gain the matrices were last calculated for,
     // are used to determine if recalculation is needed.
 
-    Complex  last_lambda;
-    Material last_gain_mat;
-    Complex  last_slab_ky;
+    Complex last_lambda;
+    Complex last_gain_mat_n;
+    Complex last_slab_ky;
 };
 
 
